K8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-frontend
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-frontend
  template:
    metadata:
      labels:
        app: library-frontend
    spec:
      containers:
      - name: library-frontend
        image: sowmya205/python-postgres:2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
