K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-frontend
  namespace: flask-app
spec:
  selector:
    app: library-frontend
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: flask-app
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
